Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRettext.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
