Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjBooleanRetBoolObjFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
